data/derived/fa15/progs/unify/prog0506.ml.out
Characters 93-97:
  else (f b', false) in f' b),b);;
                        ^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
